--- a/src/main/resources/templates/LogInforAskar.html
+++ b/src/main/resources/templates/LogInforAskar.html
@@ -2,14 +2,14 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
     <title>Log In</title>
-    <link rel="stylesheet" href="static/style.css">
+    <link rel="stylesheet" href="../static/style.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
 <div class="container" id="container">
     <div class="form-container sign-up">
-        <form>
+        <form th:action="@{/login}" th:object="${user}" method="post">
             <h1>Create Account</h1>
             <div class="social-icons">
                 <a href="#" class="icon"><i class="fa-brands fa-google-plus-g"></i></a>
@@ -18,14 +18,14 @@
                 <a href="#" class="icon"><i class="fa-brands fa-linkedin-in"></i></a>
             </div>
             <span>or use your email for registeration</span>
-            <input type="text" placeholder="Name">
-            <input type="email" placeholder="Email">
-            <input type="password" placeholder="Password">
+            <input type="text" placeholder="Name" th:field="*{firstName}">
+            <input type="email" placeholder="Email" th:field="*{email}">
+            <input type="password" placeholder="Password" th:field="*{password}">
             <button>Sign Up</button>
         </form>
     </div>
     <div class="form-container sign-in">
-        <form>
+        <form th:action="@{/login}" th:object="${user}" method="post">
             <h1>Sign In</h1>
             <div class="social-icons">
                 <a href="#" class="icon"><i class="fa-brands fa-google-plus-g"></i></a>
@@ -34,8 +34,8 @@
                 <a href="#" class="icon"><i class="fa-brands fa-linkedin-in"></i></a>
             </div>
             <span>or use your email password</span>
-            <input type="email" placeholder="Email">
-            <input type="password" placeholder="Password">
+            <input type="email" placeholder="Email" th:field="*{email}">
+            <input type="password" placeholder="Password" th:field="*{password}">
             <a href="#">Forget Your Password?</a>
             <button>Sign In</button>
         </form>
@@ -56,6 +56,6 @@
     </div>
 </div>
 
-<script href="static/script.js"></script>
+<script src="../static/script.js"></script>
 </body>
 </html>
