--- a/src/main/resources/templates/LogInforAskar.html
+++ b/src/main/resources/templates/LogInforAskar.html
@@ -1,61 +1,80 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
+<html lang="en">
+
 <head>
-    <title>Log In</title>
-    <link rel="stylesheet" href="../static/style.css">
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="../static/style.css"/>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@48,600,0,0" />
+    <title>Login Page</title>
 </head>
+
 <body>
-<div class="container" id="container">
-    <div class="form-container sign-up">
-        <form th:action="@{/login}" th:object="${user}" method="post">
-            <h1>Create Account</h1>
-            <div class="social-icons">
-                <a href="#" class="icon"><i class="fa-brands fa-google-plus-g"></i></a>
-                <a href="#" class="icon"><i class="fa-brands fa-facebook-f"></i></a>
-                <a href="#" class="icon"><i class="fa-brands fa-github"></i></a>
-                <a href="#" class="icon"><i class="fa-brands fa-linkedin-in"></i></a>
-            </div>
-            <span>or use your email for registeration</span>
-            <input type="text" placeholder="Name" th:field="*{firstName}">
-            <input type="email" placeholder="Email" th:field="*{email}">
-            <input type="password" placeholder="Password" th:field="*{password}">
-            <button>Sign Up</button>
-        </form>
-    </div>
-    <div class="form-container sign-in">
-        <form th:action="@{/login}" th:object="${user}" method="post">
+
+<div class="login-card-container">
+    <div class="login-card">
+        <div class="login-card-logo">
+            <img src="logo.png" alt="logo">
+        </div>
+        <div class="login-card-header">
             <h1>Sign In</h1>
-            <div class="social-icons">
-                <a href="#" class="icon"><i class="fa-brands fa-google-plus-g"></i></a>
-                <a href="#" class="icon"><i class="fa-brands fa-facebook-f"></i></a>
-                <a href="#" class="icon"><i class="fa-brands fa-github"></i></a>
-                <a href="#" class="icon"><i class="fa-brands fa-linkedin-in"></i></a>
+            <div>Please login to use the platform</div>
+        </div>
+        <form class="login-card-form"
+              method="post"
+              th:action="@{/login}"
+              role="form">
+
+            <div class="form-item">
+                <span class="form-item-icon material-symbols-rounded" for="username">mail</span>
+                <input type="text"
+                        placeholder="Enter Email"
+                        id="emailForm"
+                        name="username"
+                       autofocus required>
             </div>
-            <span>or use your email password</span>
-            <input type="email" placeholder="Email" th:field="*{email}">
-            <input type="password" placeholder="Password" th:field="*{password}">
-            <a href="#">Forget Your Password?</a>
-            <button>Sign In</button>
+            <div class="form-item">
+                <span class="form-item-icon material-symbols-rounded">lock</span>
+                <input type="password" placeholder="Enter Password" id="passwordForm" name="password"
+                       required>
+            </div>
+            <div class="form-item-other">
+                <div class="checkbox">
+                    <input type="checkbox" id="rememberMeCheckbox" checked>
+                    <label for="rememberMeCheckbox">Remember me</label>
+                </div>
+                <a href="#">I forgot my password!</a>
+            </div>
+            <button type="submit">Sign In</button>
+            <div class="login-card-footer">
+                Don't have an account? <a th:href="@{/register}"> Create a free account.</a>
+            </div>
         </form>
     </div>
-    <div class="toggle-container">
-        <div class="toggle">
-            <div class="toggle-panel toggle-left">
-                <h1>Welcome Back!</h1>
-                <p>Enter your personal details to use all of site features</p>
-                <button class="hidden" id="login">Sign In</button>
-            </div>
-            <div class="toggle-panel toggle-right">
-                <h1>Hello, Friend!</h1>
-                <p>Register with your personal details to use all of site features</p>
-                <button class="hidden" id="register">Sign Up</button>
-            </div>
+    <div class="login-card-social">
+        <div>Other Sign-In Options</div>
+        <div class="login-card-social-btns">
+            <a href="#">
+                <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-brand-facebook"
+                     width="24" height="24" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none"
+                     stroke-linecap="round" stroke-linejoin="round">
+                    <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
+                    <path d="M7 10v4h3v7h4v-7h3l1 -4h-4v-2a1 1 0 0 1 1 -1h3v-4h-3a5 5 0 0 0 -5 5v2h-3"></path>
+                </svg>
+            </a>
+            <a href="#">
+                <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-brand-google" width="24"
+                     height="24" viewBox="0 0 24 24" stroke-width="3" stroke="currentColor" fill="none"
+                     stroke-linecap="round" stroke-linejoin="round">
+                    <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
+                    <path d="M17.788 5.108a9 9 0 1 0 3.212 6.892h-8"></path>
+                </svg>
+            </a>
         </div>
     </div>
 </div>
 
-<script src="../static/script.js"></script>
 </body>
+
 </html>
