Adding new page

--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -155,11 +155,13 @@
         </div>
         <div class="span-ant-input-affix">
           <div class="input">
-            <div class="div-placeholder"><div class="text-wrapper-17">Find your course</div></div>
+            <div class="div-placeholder"><div class="text-wrapper-17">Find your course</div>
+            </div>
           </div>
         </div>
         <button class="button-2"><div class="text-wrapper-18">Find</div></button>
         <div class="welcome-to-a-k">Welcome to A&amp;K!</div>
+
       </div>
     </div>
   </body>
