--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -16,7 +16,7 @@
         }
         body{
             height: 100vh;
-            background: #f6fbff;
+            background: #fff no-repeat;
             background-size: cover;
             background-position: center;
         }
@@ -25,7 +25,7 @@
             top: 0;
             left: 0;
             right: 0;
-            background: #f6fbff;
+            background: #fff;
             display: flex;
             justify-content: space-between;
             align-items: center;
@@ -33,26 +33,74 @@
             box-shadow: 0 1px 5px #000;
         }
         header .logo{
-            font-size: 18px;
+            font-size: 20px;
             font-weight: 900;
-            color: #000000;
+            color: #000;
+            transition: .5s;
+        }
+        header .logo:hover{
+            transform: scale(1.2);
+        }
+        header nav ul li{
+            position: relative;
+            float: left;
+        }
+
+        header nav ul li a{
+            padding: 15px;
+            color: #000;
+            font-size: 16px;
+            display: block;
+        }
+        header nav ul li a:hover{
+            background: #000;
+            color: #fff;
+        }
+        nav ul li ul{
+            position: absolute;
+            left: 0;
+            width: 180px;
+            background: #fff;
+            display: none;
+        }
+        nav ul li ul li{
+            width: 100%;
+            border: 1px solid rgba(0,0,0,.1);
+        }
+        nav ul li ul li ul{
+            left: 180px;
+            top: 0;
+        }
+        nav ul li:hover> ul{
+            display: initial;
         }
     </style>
 </head>
 <body>
     <header>
-        <a href="a" class="logo">LOGO</a>
+        <a href="a" class="logo">Home</a>
         <nav>
             <ul>
-                <li><a href="">Home</a> </li>
-                <li><a href="">Courses</a></li>
+<!--                <li><a href="">Home</a> </li>-->
+                <li><a href="">Courses &blacktriangledown;</a>
+                      <ul>
+                        <li><a href="#">HTML</a></li>
+                        <li><a href="#">CSS</a></li>
+                        <li><a href="#">JavaScript &blacktriangledown;</a>
+                            <ul>
+                                <li><a href="#">JQuery</a></li>
+                                <li><a href="#">Node.js</a></li>
+                            </ul>
+                        </li>
+                    </ul>
+                </li>
                 <li><a href="">My education </a></li>
                 <li><a href="">Library</a></li>
                 <li><a href="">Log in</a></li>
-                <li><a href="">Sing in</a></li>
+                <li><a href="">Sing up</a></li>
             </ul>
         </nav>
-
     </header>
+
 </body>
 </html>
