--- a/src/main/resources/templates/UserProfile.html
+++ b/src/main/resources/templates/UserProfile.html
@@ -140,6 +140,45 @@
             border-radius: 6px;
             font-weight: normal;
             position: relative;
+            margin-bottom: 5%;
+        }
+        .links-span{
+            list-style: none;
+            margin-block-start: 1em;
+            margin-block-end: 1em;
+            margin-inline-start: 0px;
+            margin-inline-end: 0px;
+            padding-inline-start: 40px;
+            padding-left: 0;
+            margin-top: 0;
+            margin-bottom: 0;
+        }
+        .words-with-icons {
+            position: absolute;
+            margin-left: 3.4%;
+            margin-top: -5.9%;
+            line-height: 1.5;
+        }
+
+        .links-span li{
+            font-size: 14px;
+            display: list-item;
+            text-align: -webkit-match-parent;
+            width: 256px;
+            height: 25px;
+            padding: 4px 0px 0px 24px;
+            line-height: 20px;
+
+        }
+        .links-span li div{
+            width: 232px;
+            height: 21px;
+            font-size: 14px;
+        }
+        .links-span li span{
+            margin:4px 0px 0px -24px;
+            width: 16px;
+            height: 16px;
         }
     </style>
 </head>
@@ -191,12 +230,28 @@
                     </h1>
                 </div>
             </div>
-            <div>
+            <div style="width: 256px ; height: 31px">
                 <button class="btn-edit" type="submit">
                     Edit profile
                 </button>
+                <ul class="links-span">
+                    <li><span class="form-item-icon material-symbols-rounded" >apartment</span></li>
+                    <li><span class="form-item-icon material-symbols-rounded" >location_on</span></li>
+                    <li><span class="form-item-icon material-symbols-rounded" >schedule</span></li>
+                    <li><span class="form-item-icon material-symbols-rounded" >attachment</span></li>
+                </ul>
+                <ul class="words-with-icons">
+                    <li>University</li>
+                    <li>Location</li>
+                    <li>Time</li>
+                    <li>Link</li>
+                </ul>
+                <hr style="margin-top: 15%;">
+                <div style="margin-top: 5%;display: flex; flex-direction: row ">
+                    <h3>Highlights</h3>
+                    <h3 style="border:1px solid mediumpurple ; border-radius: 25px;text-align: center;color: mediumpurple; margin-left: 4%;width: 50px;height: 25px">PRO</h3>
+                </div>
             </div>
-
         </div>
         <div class="col-second">
 
