--- a/src/main/resources/templates/UserProfile.html
+++ b/src/main/resources/templates/UserProfile.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<html lang="en" xmlns:th="http://www.thymeleaf.org" xmlns:margin-top="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="UTF-8">
     <title>User Profile</title>
@@ -184,12 +184,11 @@
 </head>
 <body>
 <header th:fragment="hearder">
-<!--    <a href="a" class="logo">Home</a>-->
     <a th:href="@{/main}">
     <img src="https://raw.githubusercontent.com/thqu1et/Education-Web/682b0c3bd40f09bd757ea5ac924b3b1eb036c078/src/main/resources/static/logo_askar.svg" alt="user-profile-img" class="logo">
     </a>
     <nav>
-        <ul>
+        <ul th:each="el : ${user}">
             <!--                <li><a href="">Home</a> </li>-->
             <li><a href="">Courses &blacktriangledown;</a>
                 <ul>
@@ -205,7 +204,7 @@
             </li>
             <li><a href="">My education </a></li>
             <li><a href="">Library</a></li>
-            <li><a href="">User</a>
+            <li><a href="" th:text="${el.name}"></a>
                 <ul>
                     <li><a th:href="@{/logout}">Logout</a></li>
                 </ul>
@@ -215,7 +214,7 @@
 </header>
     <div class="main">
         <div class="col-first">
-            <div class="card-user">
+            <div class="card-user" th:each="el : ${user}">
                 <div class="card-uder-profile">
                     <div class="card-uder-profile-img">
                         <img src="https://raw.githubusercontent.com/thqu1et/Education-Web/682b0c3bd40f09bd757ea5ac924b3b1eb036c078/src/main/resources/static/logo_askar.svg" alt="user-profile-img" class="user-profile-img">
@@ -223,14 +222,14 @@
                 </div>
                 <div class="span-name-class">
                     <h1>
-                        <span class="name-lastname">Name and LastName</span>
+                        <span class="name-lastname" th:text="${el.name}"></span>
                     </h1>
                     <h1 >
-                        <span class="nickname">NickName</span>
+                        <span class="nickname" th:text="${el.nickname}">NickName</span>
                     </h1>
                 </div>
             </div>
-            <div style="width: 256px ; height: 31px">
+            <div style="width: 256px ; height: 31px" th:each="el : ${user}">
                 <button class="btn-edit" type="submit">
                     Edit profile
                 </button>
@@ -241,10 +240,10 @@
                     <li><span class="form-item-icon material-symbols-rounded" >attachment</span></li>
                 </ul>
                 <ul class="words-with-icons">
-                    <li>University</li>
-                    <li>Location</li>
+                    <li th:text="${el.university}">University</li>
+                    <li th:text="${el.location}">Location</li>
                     <li>Time</li>
-                    <li>Link</li>
+                    <li th:text="${el.linkSocial}">Link</li>
                 </ul>
                 <hr style="margin-top: 15%;">
                 <div style="margin-top: 5%;display: flex; flex-direction: row ">
@@ -254,7 +253,6 @@
             </div>
         </div>
         <div class="col-second">
-
         </div>
     </div>
 </body>
