--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -1,5 +1,6 @@
 <html lang="en" xmlns: th="http://www.thymeleaf.org">
 <head>
+    <script src="https://kit.fontawesome.com/30555688ec.js" crossorigin="anonymous"></script>
     <meta charset="UTF-8">
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
@@ -25,7 +26,7 @@
             top: 0;
             left: 0;
             right: 0;
-            background: #fff;
+            background: #f6fbff;
             display: flex;
             justify-content: space-between;
             align-items: center;
@@ -34,8 +35,6 @@
         }
         header .logo{
             font-size: 20px;
-            width: 60px;
-            height: 40px;
             font-weight: 900;
             color: #000;
             transition: .5s;
@@ -55,14 +54,15 @@
             display: block;
         }
         header nav ul li a:hover{
+
             background: #000;
-            color: #fff;
+            color: #f6fbff;
         }
         nav ul li ul{
             position: absolute;
             left: 0;
             width: 180px;
-            background: #fff;
+            background: #f6fbff;
             display: none;
         }
         nav ul li ul li{
@@ -76,9 +76,155 @@
         nav ul li:hover> ul{
             display: initial;
         }
+        *{
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+        }
+        .footer{
+            background-repeat: no-repeat;
+            background: #f6fbff;
+            background-position: center;
+            background-size: cover;
+            position: absolute;
+            left: 0;
+            top: 100%;
+            width: 100%;
+            display: flex;
+            justify-content: space-around;
+            flex-wrap: wrap;
+        }
+        .footer-left, .footer-right{
+            flex-basis: 35%;
+            padding: 10px;
+            margin-bottom: 20px;
+        }
+        .footer-left{
+
+            text-align: left;
+            color: #4A4A4A;
+        }
+
+        .footer-right{
+            text-align: right;
+            color: #4A4A4A;
+        }
+        .footer h3{
+            margin: 20px 0;
+            color: #4A4A4A;
+        }
+
+        .footer-center h3{
+            position: relative;
+            font-size: 40px;
+            /*top: 10%;*/
+            text-align: center;
+            margin: 40px 0px;
+        }
+        .footer p{
+            /*margin-top: 0.25cm;*/
+            margin-bottom: 0.25cm;
+        }
+
+        .footer-center{
+            color: #4A4A4A;
+            position: absolute;
+            bottom: 10px;
+            left: 50%;
+            transform: translate(-50%, -50%);
+        }
+        .social{
+            margin-top: 20px;
+            position: absolute;
+            bottom: 10px;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            font-size: 25px;
+        }
+        .social .fa-brands{
+            /*border: 3px solid #4A4A4A;*/
+            cursor: pointer;
+            transition: .5s;
+            /*border-radius: 100%;*/
+        }
+        .social .fa-brands:hover{
+            background: #4A4A4A;
+            color: #fff;
+            transform: translateY(-8px);
+        }
     </style>
+
 </head>
 <body>
-    <header th:insert="header :: hearder"></header>
+    <header>
+        <a href="a" class="logo">Home</a>
+        <nav>
+            <ul>
+<!--                <li><a href="">Home</a> </li>-->
+                <li><a href="">Courses &blacktriangledown;</a>
+                      <ul>
+                        <li><a href="#">HTML</a></li>
+                        <li><a href="#">CSS</a></li>
+                        <li><a href="#">JavaScript &blacktriangledown;</a>
+                            <ul>
+                                <li><a href="#">JQuery</a></li>
+                                <li><a href="#">Node.js</a></li>
+                            </ul>
+                        </li>
+                    </ul>
+                </li>
+                <li><a href="">My education </a></li>
+                <li><a href="">Library</a></li>
+                <li><a href="">Log in</a></li>
+                <li><a href="">Sing up</a></li>
+            </ul>
+        </nav>
+
+    </header>
+
+<!--    <div class="footer">-->
+<!--        <div class="footer-left">-->
+<!--            <p>FAQ</p>-->
+<!--            <p>About us</p>-->
+<!--            <p></p>-->
+<!--            <p></p>-->
+<!--        </div>-->
+<!--        <div class="footer-right">-->
+<!--            <h2>Contacts</h2>-->
+<!--            <p>Astana, Koshkarbaev 1/4</p>-->
+<!--            <p>Almaty, Tole bi 1/2</p>-->
+<!--        </div>-->
+<!--    </div>-->
+    </div>
+    <!-- FOOTER START -->
+    <div class="footer">
+        <div class="footer-left">
+            <h3>COMPANY</h3>
+            <p>About us</p>
+            <p>Products</p>
+            <p>Vacancy</p>
+            <p>FAQ</p>
+        </div>
+        <div class="footer-right">
+            <h3>CONTACTS</h3>
+            <p>email <i class="fa-solid fa-envelope"></i>: hello@btsdigital.kz</p>
+            <p>phone number <i class="fa-solid fa-phone"></i>: +7 (776) 178-58-19</p>
+            <p>location <i class="fa-solid fa-location-dot"></i>: Astana, Koshkarbaeva 1/4</p>
+            <p>Support</p>
+        </div>
+
+        <div class="footer-center">
+            <h3>SOCIAL</h3>
+            <div class="social">
+                <i class="fa-brands fa-instagram"></i>
+                <i class="fa-brands fa-twitter"></i>
+                <i class="fa-brands fa-facebook"></i>
+                <i class="fa-brands fa-linkedin"></i>
+            </div>
+            <h5>CREATED BY INTERNS OF BTS DIGITAL, 2023</h5>
+        </div>
+
+    </div>
+
 </body>
 </html>
