--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -1,11 +1,12 @@
-<html lang="en" xmlns: th="http://www.thymeleaf.org">
+<!DOCTYPE html>
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <script src="https://kit.fontawesome.com/30555688ec.js" crossorigin="anonymous"></script>
     <meta charset="UTF-8">
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>Main</title>
     <style type="text/css">
         *{
             margin: 0;
@@ -201,83 +202,17 @@
 
         }
     </style>
-
 </head>
 <body>
-    <header>
-        <a href="a" class="logo">Home</a>
-        <nav>
-            <ul>
-<!--                <li><a href="">Home</a> </li>-->
-                <li><a href="">Courses &blacktriangledown;</a>
-                      <ul>
-                        <li><a href="#">HTML</a></li>
-                        <li><a href="#">CSS</a></li>
-                        <li><a href="#">JavaScript &blacktriangledown;</a>
-                            <ul>
-                                <li><a href="#">JQuery</a></li>
-                                <li><a href="#">Node.js</a></li>
-                            </ul>
-                        </li>
-                    </ul>
-                </li>
-                <li><a href="">My education </a></li>
-                <li><a href="">Library</a></li>
-                <li><a href="">Log in</a></li>
-                <li><a href="">Sing up</a></li>
-            </ul>
-        </nav>
 
-    </header>
+<header th:insert="header"></header>
 
-<!--    <div class="footer">-->
-<!--        <div class="footer-left">-->
-<!--            <p>FAQ</p>-->
-<!--            <p>About us</p>-->
-<!--            <p></p>-->
-<!--            <p></p>-->
-<!--        </div>-->
-<!--        <div class="footer-right">-->
-<!--            <h2>Contacts</h2>-->
-<!--            <p>Astana, Koshkarbaev 1/4</p>-->
-<!--            <p>Almaty, Tole bi 1/2</p>-->
-<!--        </div>-->
-<!--    </div>-->
-    </div>
     <div class="search-box">
         <input class="search-txt" type="text" name="" placeholder="Type to search">
         <a class = "search-btn" href="#"><i class="fa-solid fa-magnifying-glass"></i></a>
     </div>
+
     <!-- FOOTER START -->
-    <div class="footer">
-        <div class="footer-left">
-            <h3>COMPANY</h3>
-            <p>About us</p>
-            <p>Products</p>
-            <p>Vacancy</p>
-            <p>FAQ</p>
-        </div>
-        <div class="footer-right">
-            <h3>CONTACTS</h3>
-            <p>email <i class="fa-solid fa-envelope"></i>: hello@btsdigital.kz</p>
-            <p>phone number <i class="fa-solid fa-phone"></i>: +7 (776) 178-58-19</p>
-            <p>location <i class="fa-solid fa-location-dot"></i>: Astana, Koshkarbaeva 1/4</p>
-            <p>Support</p>
-        </div>
-
-        <div class="footer-center">
-            <h3>SOCIAL</h3>
-            <div class="social">
-                <i class="fa-brands fa-instagram"></i>
-                <i class="fa-brands fa-twitter"></i>
-                <i class="fa-brands fa-facebook"></i>
-                <i class="fa-brands fa-linkedin"></i>
-            </div>
-            <h5>CREATED BY INTERNS OF BTS DIGITAL, 2023</h5>
-        </div>
-
-    </div>
-
-
+<div th:insert="footer"></div>
 </body>
 </html>
