--- a/src/main/resources/templates/about.html
+++ b/src/main/resources/templates/about.html
@@ -36,11 +36,11 @@
       <div class="profile">
          <img src="../static/images/pic-1.jpg" class="image" alt="">
          <h3 class="name">shaikh anas</h3>
-         <p class="role">studen</p>
+         <p class="role">student</p>
          <a href="profile.html" class="btn">view profile</a>
          <div class="flex-btn">
-            <a href="login.html" class="option-btn">login</a>
-            <a href="register.html" class="option-btn">register</a>
+            <a th:href="@{/login}" class="option-btn">login</a>
+            <a th:href="@{/register}" class="option-btn">register</a>
          </div>
       </div>
 
