--- a/src/main/resources/templates/teacher_profile.html
+++ b/src/main/resources/templates/teacher_profile.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
    <meta charset="UTF-8">
    <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -39,8 +39,8 @@
          <p class="role">studen</p>
          <a href="profile.html" class="btn">view profile</a>
          <div class="flex-btn">
-            <a href="./login.html" class="option-btn">login</a>
-            <a href="./register.html" class="option-btn">register</a>
+            <a th:href="@{/login}" class="option-btn">login</a>
+            <a th:href="@{/register}" class="option-btn">register</a>
          </div>
       </div>
 
@@ -56,8 +56,8 @@
 
    <div class="profile">
       <img src="../static/images/pic-1.jpg" class="image" alt="">
-      <h3 class="name">shaikh anas</h3>
-      <p class="role">studen</p>
+      <h3 class="name">Abylkhaiyrov Askar</h3>
+      <p class="role">student</p>
       <a href="profile.html" class="btn">view profile</a>
    </div>
 
