--- a/src/main/resources/templates/update.html
+++ b/src/main/resources/templates/update.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
    <meta charset="UTF-8">
    <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -19,7 +19,7 @@
    
    <section class="flex">
 
-      <a href="../../../../../../../../../../Downloads/desgin/home.html" class="logo">Educa.</a>
+      <a href="home.html" class="logo">Educa.</a>
 
       <form action="search.html" method="post" class="search-form">
          <input type="text" name="search_box" required placeholder="search courses..." maxlength="100">
@@ -39,8 +39,8 @@
          <p class="role">studen</p>
          <a href="profile.html" class="btn">view profile</a>
          <div class="flex-btn">
-            <a href="login.html" class="option-btn">login</a>
-            <a href="register.html" class="option-btn">register</a>
+            <a th:href="@{/login}" class="option-btn">login</a>
+            <a th:href="@{/register}" class="option-btn">register</a>
          </div>
       </div>
 
@@ -56,17 +56,17 @@
 
    <div class="profile">
       <img src="../static/images/pic-1.jpg" class="image" alt="">
-      <h3 class="name">shaikh anas</h3>
-      <p class="role">studen</p>
+      <h3 class="name">Abylkhaiyrov Askar</h3>
+      <p class="role">student</p>
       <a href="profile.html" class="btn">view profile</a>
    </div>
 
    <nav class="navbar">
-      <a href="../../../../../../../../../../Downloads/desgin/home.html"><i class="fas fa-home"></i><span>home</span></a>
-      <a href="../../../../../../../../../../Downloads/desgin/about.html"><i class="fas fa-question"></i><span>about</span></a>
-      <a href="../../../../../../../../../../Downloads/desgin/courses.html"><i class="fas fa-graduation-cap"></i><span>courses</span></a>
+      <a href="home.html"><i class="fas fa-home"></i><span>home</span></a>
+      <a href="about.html"><i class="fas fa-question"></i><span>about</span></a>
+      <a href="courses.html"><i class="fas fa-graduation-cap"></i><span>courses</span></a>
       <a href="teachers.html"><i class="fas fa-chalkboard-user"></i><span>teachers</span></a>
-      <a href="../../../../../../../../../../Downloads/desgin/contact.html"><i class="fas fa-headset"></i><span>contact us</span></a>
+      <a href="contact.html"><i class="fas fa-headset"></i><span>contact us</span></a>
    </nav>
 
 </div>
