--- a/src/main/resources/templates/playlist.html
+++ b/src/main/resources/templates/playlist.html
@@ -36,7 +36,7 @@
       <div class="profile">
          <img src="../static/images/pic-1.jpg" class="image" alt="">
          <h3 class="name">shaikh anas</h3>
-         <p class="role">studen</p>
+         <p class="role">student</p>
          <a href="profile.html" class="btn">view profile</a>
          <div class="flex-btn">
             <a th:href="@{/login}" class="option-btn">login</a>
@@ -56,8 +56,8 @@
 
    <div class="profile">
       <img src="../static/images/pic-1.jpg" class="image" alt="">
-      <h3 class="name">shaikh anas</h3>
-      <p class="role">studen</p>
+      <h3 class="name">Abylkhairov Askar</h3>
+      <p class="role">student</p>
       <a href="profile.html" class="btn">view profile</a>
    </div>
 
