--- a/src/main/resources/templates/update.html
+++ b/src/main/resources/templates/update.html
@@ -19,7 +19,7 @@
    
    <section class="flex">
 
-      <a href="home.html" class="logo">Educa.</a>
+      <a href="home.html" class="logo">A&K.</a>
 
       <form action="search.html" method="post" class="search-form">
          <input type="text" name="search_box" required placeholder="search courses..." maxlength="100">
@@ -35,8 +35,8 @@
 
       <div class="profile">
          <img src="../static/images/pic-1.jpg" class="image" alt="">
-         <h3 class="name">shaikh anas</h3>
-         <p class="role">studen</p>
+         <h3 class="name">Abylkhairov Askar</h3>
+         <p class="role">student</p>
          <a href="profile.html" class="btn">view profile</a>
          <div class="flex-btn">
             <a th:href="@{/login}" class="option-btn">login</a>
