--- a/src/main/resources/templates/block/footer.html
+++ b/src/main/resources/templates/block/footer.html
@@ -1,5 +1,5 @@
 <footer class="footer" th:fragment="footer">
 
-    &copy; copyright @ 2023 by <span>CREATED BY ABYLKHAIYROV & KUDAIBERGANOV</span> | all rights reserved!
+    &copy; copyright @ 2023 by <span>CREATED BY MOEXIEE & KENT</span> | all rights reserved!
 
 </footer>
